lib_LIBRARIES = libeglib.a

libeglib_a_CFLAGS = -I$(top_builddir)/font_generator

AUTOMAKE_OPTIONS = subdir-objects

libeglib_a_SOURCES = eglib.c
libeglib_a_SOURCES += eglib/display.c
libeglib_a_SOURCES += eglib/display/frame_buffer.c
libeglib_a_SOURCES += eglib/display/sh1106.c
libeglib_a_SOURCES += eglib/display/ssd1331.c
libeglib_a_SOURCES += eglib/display/st7789.c
libeglib_a_SOURCES += eglib/display/tga.c
libeglib_a_SOURCES += eglib/drawing.c
nodist_libeglib_a_SOURCES = $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_courier_bold.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_courier_bold_oblique.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_courier.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_courier_oblique.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_helvetica_bold.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_helvetica_bold_oblique.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_helvetica.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_helvetica_oblique.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_new_century_schoolbook_bold.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_new_century_schoolbook_bold_italic.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_new_century_schoolbook_italic.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_new_century_schoolbook_roman.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_new_centuy_schoolbook_bold.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_new_cenury_schoolbook_roman.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_times_bold.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_times_bold_italic.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_times_italic.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/adobe_times_roman.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_mono_bold.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_mono_bolditalic.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_mono_italic.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_mono_regular.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_sans_bold.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_sans_bolditalic.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_sans_italic.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_sansnarrow_bold.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_sansnarrow_bolditalic.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_sansnarrow_italic.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_sansnarrow_regular.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_sans_regular.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_serif_bold.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_serif_bolditalic.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_serif_italic.c
nodist_libeglib_a_SOURCES += $(top_builddir)/font_generator/eglib/drawing/fonts/liberation_serif_regular.c
libeglib_a_SOURCES += eglib/hal.c
# libeglib_a_SOURCES += eglib/hal/common/libopencm3/stm32f4/delay.c
# libeglib_a_SOURCES += eglib/hal/four_wire_spi/libopencm3_stm32f4.c
libeglib_a_SOURCES += eglib/hal/four_wire_spi/none.c
libeglib_a_SOURCES += eglib/hal/four_wire_spi/stdout.c
# libeglib_a_SOURCES += eglib/hal/i2c/libopencm3_stm32f4.c


nobase_include_HEADERS = eglib.h
nobase_include_HEADERS += eglib/display.h
nobase_include_HEADERS += eglib/display/frame_buffer.h
nobase_include_HEADERS += eglib/display/sh1106.h
nobase_include_HEADERS += eglib/display/ssd1331.h
nobase_include_HEADERS += eglib/display/st7789.h
nobase_include_HEADERS += eglib/display/tga.h
nobase_include_HEADERS += eglib/drawing.h
nobase_include_HEADERS += eglib/hal.h
# nobase_include_HEADERS += eglib/hal/four_wire_spi/libopencm3_stm32f4.h
nobase_include_HEADERS += eglib/hal/four_wire_spi/none.h
nobase_include_HEADERS += eglib/hal/four_wire_spi/stdout.h
# nobase_include_HEADERS += eglib/hal/i2c/libopencm3_stm32f4.h
nobase_include_HEADERS += eglib/types.h